fixed problem where sometimes there would be two scrollbars

--- a/src/components/modal/addtostudio/modal.scss
+++ b/src/components/modal/addtostudio/modal.scss
@@ -6,6 +6,14 @@ $medium: "only screen and (min-width : #{$mobile}+1) and (max-width : #{$tablet}
 $small-height: "only screen and (max-height : #{$mobile})";
 $medium-height: "only screen and (min-height : #{$mobile} + 1) and (max-height : #{$tablet} - 1)";
 
+.mod-addToStudio {
+    overflow: hidden;
+
+    @media #{$small}, #{$small-height} {
+        overflow: hidden;
+    }
+}
+
 .addToStudio-modal-header {
     box-shadow: inset 0 -1px 0 0 $ui-blue-dark;
     background-color: $ui-blue;
